MainPage/mainPageStyle.css
:root {
  --pill-height: 20vh; 
}

@font-face {
  font-family: "Roboto", sans-serif;
}

h2{
  margin-left: 5%;
  font-size: clamp(1.8rem, 2.2vw, 29rem);
}

section {
  position: relative;
  /*transform: translate(0, 50vh);*/
  height: 100vh;
}


#chapterList {
  position: fixed;
  top: 25vh;
  left: 5vw;
  width: 25vw;

  height: 55vh;

  /*display: flex;*/
  font-size: clamp(1rem, 1rem + 3vw, 20rem);

}

#chapterList ul {
  z-index: 50;
  position: relative;
  right: 0;

  margin: 0;
  padding: 0;
  list-style-type: none;

  height: 100%;
  width: 100%;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  /*font-size: clamp(3rem, 2.2vw, 29rem);*/
  font-weight: 500;
  line-height: 1;

  /*overflow: hidden;*/
}

#chapterPill {
  position: absolute;
  right: -25%;
  top: calc(0% + 0.5em - var(--pill-height)/2);
  
  width: 80vw;
  height: var(--pill-height);
  /*transform: translate(-50%);*/
  
  /*background-color: lightsalmon;*/
  background-color: #FFC94B;
  border-radius: var(--pill-height);
  
  z-index: 0;
  
  /* Smooth transitions when position changes */
  transition: top 0.4s cubic-bezier(0.4, 0.0, 0.2, 1);
}

#chapterList li {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  user-select: none;
  width: 100%;
  text-align: right;
  /*margin-right: 10%; /* Push text 10% from the right edge */
  margin-bottom: 0;
  transition: font-weight 0.3s ease, color 0.3s ease;
  cursor: pointer;
  transform: translateX(-10%); 
  transition: all 0.3s ease-in-out 0s;
  white-space: nowrap; 
  /*transform-origin: right center;*/
}

#chapterList li.chapterSelected {
  transform: translateX(0%); 
  font-weight: 800;
  position: relative;
  scale: 1.2;
}

#chapterList.normal-click li:hover {
  transform: translateX(0%); 
  font-weight: 400;
}


#sideLayout {
  display: flex;
  flex-direction: column;
  align-content: space-around;
  margin-left: 37vw;
  margin-right: 0.5vw;
}

.centredContent {
  display: block;
} 




/*About Me section*/
#aboutMe {
  position: relative;
  /*margin-top: 5vh;*/
  display: flex;
  gap: 2vh;
  padding-bottom: -10vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#myPicture {
  max-width: 38%;
  max-height: 50vh;
  aspect-ratio: 1 / 1;
  padding: 0;
  box-sizing: border-box;
  border-radius: 1rem;
  border-color: black;
  border-width: 0.2rem;
  border-style: solid;
  overflow: hidden;
  z-index: 2;
}

#myPicture img {
  position: relative;
  display: block;
  padding: 0;
  /*margin: 0;*/
  width: 100%;
  /*margin-top: -5%;*/
  -webkit-backdrop-filter: blur(16px);
    backdrop-filter: blur(16px);

}

#aboutMeBlurb {
  display: block;
  width: 90%;
  font-size: clamp(1.7rem, 1.5vw, 15rem);
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  z-index: 2;
  text-align: justify;
  /*Maybe ^?*/
}

.shape {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  /*filter: blur(1px);*/
}



/*Highlighted projects*/
#highlightedProjects{
  height: 100vh;  
  display: grid;
  gap: 2%;
  column-gap: 0%;
  grid-template-columns: 6fr 4fr;
  grid-template-rows: 1fr 1fr;
  box-sizing: border-box;
}

#VULTURCard,
#TVCard,
#CrowdCard{
  display: flex;
  min-height: 100%;
  overflow: visible;           /* prevents any visual bleed */
}

#VULTURCard { 
  grid-column: 1; 
  grid-row: 1 / -1; 
  justify-content: center;
  align-items: end;
  flex-direction: column;
}

#TVCard     { 
  grid-column: 2; 
  grid-row: 1; 
  align-items: end;
  justify-content: center;
}

#CrowdCard  { 
  grid-column: 2; 
  grid-row: 2; 
  align-items: start;
  justify-content: center;
}


#cardStack{
  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: center;
  gap: 1.4rem;
  height: 90%;
  max-width: 100%;
}

a{
  width: 92%;
}

#cardStack button {
  width: 100%;
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  /*background-image: url(../images/Transparent-Texture.webp);*/
  box-sizing: border-box;
  box-shadow: 0.3rem 0.3rem 0.9rem -0.4rem;
  color:black;
  background-color: white;

  cursor:pointer;
  border-width: 0;
  border-radius: 1rem;

  text-transform: uppercase;
  font-size: clamp(0.7rem, 1.2vw, 10rem);
  /*font-family: "Roboto", sans-serif;
  font-weight: 400;*/
  padding: 0.7rem;

  transition: all 0.3s ease-out 0s;
}

#cardStack button:hover {
  border-color: transparent;
  /*Padding causes the parent to expand which is not what i want*/
  padding-top: 1rem;
  padding-bottom: 1rem;
  transform: scale(1.05);
  margin-top: -0.3rem;
  margin-bottom: -0.3rem;
  font-weight: 800;
}

#cardStack .ProjectCard {
   max-width: 92%;
  max-height: 92%;
}

.ProjectCard {
  /*cursor: none;*/

  aspect-ratio: 1/1.4;
  /* fit inside the grid cell */
  max-width: 70%;
  max-height: 92%;
  /* let the browser pick the limiting dimension */
  width: auto;
  height: auto;  

  padding: 0.5rem 0.5rem 0.2rem 0.5rem;
  border-radius: 1rem;
  border-width: 0rem;
  box-sizing: border-box;
  box-shadow: 0.3rem 0.3rem 0.9rem -0.4rem;
  background-color: white;
  overflow: hidden;
  position: relative;

  transition: transform 0.3s ease-out 0s;
}

.ProjectCard:hover {
  transform: scale(1.05);
  z-index: 10;
}

.ProjectCard h1 {
  margin: 0;
  margin-left: 1%;
  margin-top: 1%;
  font-size: clamp(0.1rem, 1.4rem, 10rem);
}

.ProjectCard .CardBlurb {
  user-select: none;
  margin: 0;
  width: 98%;
  max-height: 22%;
  font-size: clamp(0.7rem, 1rem, 10rem);
  margin-left: 1%;
  margin-top: 1%;
  margin-bottom: 100%;
  scrollbar-width: thin; 
  overflow-y: auto;
}

.ProjectCard p {
  margin: 0;
}

.CardImage {
  width: 99%;
  height: 65%;
  border-radius: 0.8rem;
  box-sizing: border-box;
  border-width: 0rem;
  border-style: solid;
  margin:auto;
  background: gray;
  overflow: hidden;
}

.CardImage img {
  width: 100%;
}

#VULTURCard .ProjectCard h1 {
  font-size: clamp(1rem, 2.3rem, 30rem);;
}

#VULTURCard .ProjectCard p {
  font-size: clamp(0.3rem, 0.6vh + 0.6vw + 0.3rem, 2rem);
}



/*Work Experience*/
#workExperience{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3vh;
  /*background-color: red;*/
}

#universityExperience {
  text-decoration: none;
  color: inherit;
  display: flex;
  gap: 1vw;
  background-color: white;
  width: 86%;
  border-radius: 1rem;
  overflow: hidden;

  transition: all 0.3s ease-out 0s;
}

#universityExperience:hover {
  transform: scale(1.05);
  position: relative;
  z-index: 10;
}

#uniLogoFrame {
  aspect-ratio: 1/1;
  min-width: 20%;
  max-width: 20%;
  margin: auto;
  padding: 1rem;
  padding-right: 0;
  overflow: hidden;
  user-select: none;
}

#uniLogoFrame img {
  width: 100%;
}

#uniText {
  padding: 1rem;
  margin: auto;
}

#uniText h3 {
  /*text-transform: uppercase;*/
  font-size: clamp(1.3rem, 1.8vw, 1.5rem);
  font-weight: 600;
  margin: 0;
}

#uniText h4 {
  display: inline-block;
  margin: 0;
  margin-bottom: 1%;
  text-transform: uppercase;
  font-style: italic;
  font-size: clamp(0.3rem, 1vw + 0.3rem, 1.2rem);
  font-weight: 400;
}

#uniText p {
  align-self: start;
  /*text-align: justify;*/
  font-size:  clamp(0.4rem, 0.8vw + 0.4rem, 3rem);
  user-select: none;
}

#experiences {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 4vh;
  cursor: ns-resize;
  box-sizing: border-box;
  width: 86%;
  min-height: 5rem;
  max-height: 50%;
  overflow: -moz-scrollbars-vertical; 
  overflow-y: scroll;
  background-color: white;
  border-radius: 1rem;
  border-width: 2px;
  box-shadow: 0 -10vh 10vh -15vh black inset;
  padding: 3%;
}

.experience {
  display: grid;
  grid-template-areas: 
  "JobTitle JobTitle Company"
  "Blurb    Blurb    Blurb";
  /*margin-bottom: 5%;*/
}

#experiences h3 {
  user-select: none;
  grid-area: JobTitle;

  align-self: end;
  text-transform: uppercase;
  font-size: clamp(1.3rem, 1.8vw, 1.5rem);
  font-weight: 600;
  margin: 0;
  font-style: italic;
}

#experiences h4 {
  align-self: end;
  justify-self: end;
  grid-area: Company;
  display: inline-block;
  margin: 0;
  margin-bottom: 1%;
  text-transform: uppercase;
  font-size: clamp(0.4rem, 1vw + 0.4rem, 1.2rem);
  font-weight: 600;
  /*font-style: italic;*/
}

#experiences p{
  user-select: none;
  grid-area: Blurb;
  margin: 1%;
  margin-right: 0;
  align-self: start;
  font-size:  clamp(0.4rem, 0.8vw + 0.4rem, 3rem);
}

@media (max-width: 1200px) {
  .experience {
    grid-template-areas: 
    "JobTitle"
    "Company"
    "Blurb";
  }

  #experiences h4 {
    align-self: start;
    justify-self: start;
    grid-area: Company;
    display: inline-block;
    margin: 0;
    margin-bottom: 1%;
  }
 }

